--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Ignoring the generated html documentation from percentage of languages used in project
 /WorkoutTracker/WorkoutTracker/WorkoutTracker/docs/* linguist:ignore
+/WorkoutTracker/WorkoutTracker/WorkoutTracker/docs/* linguist-vendored
+/WorkoutTracker/WorkoutTracker/docs/* linguist:ignore
+/WorkoutTracker/WorkoutTracker/docs/* linguist-vendored
