--- a/WorkoutTracker/WorkoutTracker/WorkoutTracker/WorkoutTracker.csproj
+++ b/WorkoutTracker/WorkoutTracker/WorkoutTracker/WorkoutTracker.csproj
@@ -7,5 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+  </ItemGroup>
 
 </Project>
