--- a/WorkoutTracker/WorkoutTracker/WorkoutTracker/WorkoutTracker.csproj
+++ b/WorkoutTracker/WorkoutTracker/WorkoutTracker/WorkoutTracker.csproj
@@ -11,5 +11,8 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Components\Models\" />
+  </ItemGroup>
 
 </Project>
