--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-WorkoutTracker/WorkoutTracker/WorkoutTracker/docs/* linguist-vendored
+# Tell Linguist to ignore all files by default
+* linguist-vendored
+
+# Include only files in the components directory where my src is, so generated code (eg HTML autodocs, build files, etc.) aren't counted by the linguist
+WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/** linguist-vendored=false
