Specifying that razor files are C#

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 
 # Include only files in the components directory where my src is, so generated code (eg HTML autodocs, build files, etc.) aren't counted by the linguist
 WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/**/* linguist-vendored=false
+
+# specify .razor files as C# files
+*.razor linguist-language=CSharp
